--- a/education.html
+++ b/education.html
@@ -54,7 +54,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
                             <h1>Education</h1>
-                            <span class="subheading">Here's what I've learned.</span>
+                            <span class="subheading">Here's what I've learned during the course of my years in school.</span>
                         </div>
                     </div>
                 </div>
